--- a/package.json
+++ b/package.json
@@ -19,7 +19,6 @@
     "moment": "^2.29.4",
     "mongoose": "^7.1.0",
     "multer": "^1.4.5-lts.1",
-    "nodemon": "^2.0.22",
-    "sharp": "^0.32.1"
+    "nodemon": "^2.0.22"
   }
 }
